Bug 1275898 - Proper about:cache asyncOpen implementation + kill the disk entries loop hard on shutdown, r=michal, a=lizzard

MozReview-Commit-ID: 3Tmvy45Iayu